// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amalitech-snackbar should render when callToAction and href props are provided 1`] = `
<amalitech-snackbar call-to-action-text="" snackbar-text="">
  <mock:shadow-root>
    <div class="snackbar__content">
      <div class="section">
        <div class="icon">
          <svg height="16" viewBox="0 0 512 512" width="16" xmlns="http://www.w3.org/2000/svg">
            <path d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm0-384c13.3 0 24 10.7 24 24v112c0 13.3-10.7 24-24 24s-24-10.7-24-24V152c0-13.3 10.7-24 24-24zm-32 224a32 32 0 1 1 64 0 32 32 0 1 1-64 0z" fill="#D14343"></path>
          </svg>
        </div>
        <p></p>
        <p class="cta">
          <a href="https://example.com" target="_blank"></a>
        </p>
      </div>
    </div>
  </mock:shadow-root>
</amalitech-snackbar>
`;

exports[`amalitech-snackbar should render when closeable prop is provided 1`] = `
<amalitech-snackbar call-to-action-text="" snackbar-text="">
  <mock:shadow-root>
    <div class="snackbar__content snackbar__dismissible">
      <div class="section">
        <div class="icon">
          <svg height="16" viewBox="0 0 512 512" width="16" xmlns="http://www.w3.org/2000/svg">
            <path d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm0-384c13.3 0 24 10.7 24 24v112c0 13.3-10.7 24-24 24s-24-10.7-24-24V152c0-13.3 10.7-24 24-24zm-32 224a32 32 0 1 1 64 0 32 32 0 1 1-64 0z" fill="#D14343"></path>
          </svg>
        </div>
        <p></p>
        <p class="cta">
          <a href="" target="_blank"></a>
        </p>
      </div>
    </div>
    <span class="snackbar__close-text">
      <svg height="16" viewBox="0 0 512 512" width="16" xmlns="http://www.w3.org/2000/svg">
        <path d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm-81-337c9.4-9.4 24.6-9.4 33.9 0l47 47 47-47c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-47 47 47 47c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-47-47-47 47c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l47-47-47-47c-9.4-9.4-9.4-24.6 0-33.9z" fill="#696F8C"></path>
      </svg>
    </span>
  </mock:shadow-root>
</amalitech-snackbar>
`;

exports[`amalitech-snackbar should render with default props 1`] = `
<amalitech-snackbar call-to-action-text="" snackbar-text="">
  <mock:shadow-root>
    <div class="snackbar__content">
      <div class="section">
        <div class="icon">
          <svg height="16" viewBox="0 0 512 512" width="16" xmlns="http://www.w3.org/2000/svg">
            <path d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm0-384c13.3 0 24 10.7 24 24v112c0 13.3-10.7 24-24 24s-24-10.7-24-24V152c0-13.3 10.7-24 24-24zm-32 224a32 32 0 1 1 64 0 32 32 0 1 1-64 0z" fill="#D14343"></path>
          </svg>
        </div>
        <p></p>
        <p class="cta">
          <a href="" target="_blank"></a>
        </p>
      </div>
    </div>
  </mock:shadow-root>
</amalitech-snackbar>
`;
